# Tarsio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  JCE_PROTOCOL.md  README.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  testing.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: rust_refactor.md
.sisyphus/notepads/rust-refactor/: learnings.md
.sisyphus/plans/: rust-refactor.md
.trae/documents/: 为 src 子目录编写 README.md
docs/: index.md  known_issues.md  protocol.md
docs/api/: exceptions.md  fields.md  functions.md  inspect.md  serialization.md  streams.md  struct.md  type_adapter.md  types.md
docs/usage/: cli.md  constraints.md  conversion_table.md  fields.md  inspect.md  models.md  schema_evolution.md  serialization.md  streams.md  structs.md  type_adapter.md  types.md
jce/: __init__.py  __main__.py  adapter.py  api.py  config.py  const.py  context.py  decoder.py  decoder_stack.py  encoder.py  exceptions.py  jce_core.pyi  log.py  options.py  stream.py  struct.py  types.py
jce-core/: AGENTS.md  Cargo.toml  pyproject.toml
jce-core/python/jce_core/: __init__.py  __init__.pyi  _jce_core.pyi
jce-core/src/: consts.rs  error.rs  lib.rs  reader.rs  serde.rs  stream.rs
python/: AGENTS.md
python/bench/: bench.py
python/jce/: api.py  stream.py
python/jce/_jce_core/: __init__.pyi
python/tarsio/: AGENTS.md  __init__.py  __init__.pyi  __main__.py  _core.pyi  adapter.py  api.py  config.py  const.py  context.py  exceptions.py  inspect.pyi  log.py  options.py  stream.py  struct.py  types.py
python/tarsio/_core/: __init__.pyi
python/tests/: AGENTS.md  README.md  conftest.py  test_adapter.py  test_api.py  test_cli.py  test_decode_robustness.py  test_generics.py  test_inspect.py  test_invariants.py  test_log.py  test_meta.py  test_protocol.py  test_protocols.py  test_raw_binding.py  test_raw_compliance.py  test_schema.py  test_schema_rules.py  test_sequence_large.py  test_stdlib_types.py  test_stream.py  test_struct.py  test_struct_api.py  test_structs.py  test_typing.py  test_typing_semantics.py
python/tests/benchmarks/raw/: conftest.py  test_direct.py  test_dispatch_perf.py  test_errors.py  test_map_perf.py  test_mixed.py  test_nested.py  test_payloads.py  test_small.py  test_sparse.py
python/tests/benchmarks/schema/: conftest.py  models.py  test_comparison.py  test_containers.py  test_errors.py  test_payloads.py  test_primitives.py  test_special.py  test_struct_perf.py  test_structural.py  test_union_perf.py
python/tests/typechecking/: test_types.py
scripts/: bench.py
src/: AGENTS.md  README.md  lib.rs  schema.rs  serde.rs  stream.rs
src/binding/: AGENTS.md  any_codec.rs  compiler.rs  core.rs  de.rs  error.rs  generics.rs  inspect.rs  instantiate.rs  introspect.rs  ir.rs  meta.rs  metaclass.rs  mod.rs  parse.rs  raw.rs  schema.rs  ser.rs  trace.rs  utils.rs  validation.rs
src/binding/codec/: de.rs  raw.rs  ser.rs  trace.rs
src/bindings/: README.md  deserializer.rs  error.rs  exceptions.rs  generics.rs  mod.rs  schema.rs  serializer.rs  stream.rs  validator.rs
src/codec/: AGENTS.md  README.md  consts.rs  endian.rs  error.rs  mod.rs  reader.rs  scanner.rs  writer.rs
tests/: test_adapter.py  test_api.py  test_cli.py  test_decoder.py  test_decoder_coverage.py  test_decoder_internals.py  test_generics.py  test_log.py  test_protocol.py  test_stream.py  test_struct.py  test_struct_patterns.py  test_types.py
