[package]
name = "tarsio-core"
version = "0.3.1"
edition = "2024"

[lib]
name = "tarsio_core"
crate-type = ["cdylib"]


[dependencies]
byteorder = "1.5.0"
bytes = "1.9"
simdutf8 = "0.1.5"
thiserror = "2.0"
pyo3 = { version = "0.28.0", features = ["extension-module", "generate-import-lib"] }

[dev-dependencies]
proptest = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
