[project]
name = "tarsio"
version = "0.4.0"
description = "Fast Tars/JCE protocol implementation for Python, powered by Rust"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "l-1124", email = "68656403+L-1124@users.noreply.github.com" },
]
keywords = [
  "binary",
  "jce",
  "protocol",
  "serialization",
  "struct",
  "tars",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
dependencies = ["typing-extensions>=4.15.0"]

[project.urls]
Homepage = "https://github.com/L-1124/Tarsio"
Issues = "https://github.com/L-1124/Tarsio/issues"
Repository = "https://github.com/L-1124/Tarsio"

[project.scripts]
tarsio = "tarsio.__main__:main"

[project.optional-dependencies]
cli = ["click>=8.0", "rich>=14.2.0"]

[dependency-groups]
dev = [
  "maturin>=1.11.5",
  { include-group = "cli" },
  { include-group = "linting" },
  { include-group = "testing" },
]
all = [
  { include-group = "cli" },
  { include-group = "docs" },
  { include-group = "linting" },
  { include-group = "testing" },
]
cli = ["click>=8.0", "rich>=14.2.0"]
docs = [
  "griffe-inherited-docstrings>=1.1.2",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.1",
  "mkdocstrings[python]>=1.0.1",
  "pymdown-extensions>=10.20",
]
linting = [
  "basedpyright>=1.37.2",
  "pre-commit>=4.5.1",
  "ruff>=0.14.14",
]
testing = ["pytest>=9.0.2", "pytest-cov>=7.0.0"]

[build-system]
requires = ["maturin>=1.10,<2"]
build-backend = "maturin"

[tool.maturin]
exclude = ["target/**/*"]
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]
include = [
  "python/tarsio/**/*",
  "README.md",
  "LICENSE",
  "src/**/*",
  "Cargo.toml",
]
module-name = "tarsio._core"
# manifest-path not needed as it is in root
python-source = "python"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["python/tests"]

[tool.pytest]
addopts = ["--cov-report=term-missing", "--cov=tarsio", "-v"]
minversion = "6.0"
python_files = ["test_*.py"]
pythonpath = ["python"]
testpaths = ["python/tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "B",  # flake8-bugbear
  "I",  # isort
  "UP",  # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff specific rules
  "C4",  # flake8-comprehensions
  "PT",  # flake8-pytest-style
  "RET",  # flake8-return
  "ARG",  # flake8-unused-arguments
  "ERA",  # eradicate (commented out code)
  "PL",  # pylint
  "TRY",  # tryceratops (异常处理反模式)
  "PERF",  # perflint (性能优化)
  "D",  # pydocstyle (文档字符串风格)
]
ignore = [
  "D100",
  "D104",
  "D105",
  "D107",  # Missing docstrings in specific locations
  "PLR0913",  # Too many arguments
  "PLR2004",  # Magic values used in comparison
  "PLR0911",  # Too many return statements
  "PLR0912",  # Too many branches
  "PLR0915",  # Too many statements
  "PLC0415",  # Import outside toplevel (necessary for circular dependencies)
  "PLW2901",  # Loop variable overwritten by assignment target
  "PLW3201",
  "PLR0917",
  "ERA001",  # Commented out code (often false positives on Chinese comments)
  "SIM102",  # Nested if statements (sometimes clearer than composite)
  "SIM108",  # Use ternary operator (sometimes less readable)
  "SIM118",  # Use `key in dict` instead of `key in dict.keys()` (safe but noisy)
  "TRY003",  # Avoid specifying long messages outside the exception class
  "TRY300",  # Consider moving this statement to an `else` block
  "TRY004",  # Prefer `TypeError` exception for invalid type
  "RET503",  # Missing explicit return
  "RET504",  # Unnecessary assignment before return
  "RET505",  # Unnecessary else/elif after return
  "RUF002",
  "RUF003",
  "B028",  # No explicit stacklevel
  "E501",  # Line too long
]
pydocstyle = { convention = "google" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.uv]
default-groups = ["dev"]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" },
  { file = "**/*.rs" },
]
