[package]
name = "jce-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "jce_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.5.0"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
pyo3-stub-gen = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
