[project]
name = "jce-core"
version = "0.1.0"
description = "Core Rust extension for JCE Struct"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "jce.jce_core"
features = ["pyo3/extension-module"]

