[project]
name = "jce-core"
description = "Core Rust extension for JCE Struct"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
dynamic = ['version']

[build-system]
requires = ['maturin>=1.10,<2']
build-backend = 'maturin'

[dependency-groups]
dev = ["maturin"]

[tool.maturin]
module-name = "jce.jce_core"
features = ["pyo3/extension-module"]
python-source = ".."
include = ["jce/jce_core.pyi"]
exclude = ["jce/*.py", "tests", "docs", "site", "uv.lock"]
bindings = 'pyo3'
editable-profile = 'dev'

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "**/*.rs" },
]